welcome 페이지 배경화면 상하단 이펙트 및 낙화 효과 추가

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   </head>
   <body>
     <link rel="stylesheet" href="https://fonts.googleapis.com/earlyaccess/nanummyeongjo.css" />
+    <script src="/sakura.js"></script>
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
